--- a/4000s24.html
+++ b/4000s24.html
@@ -136,6 +136,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/29</span><span class="course-task col-md-10"> The existence of &quot;$1/a$ mod $m$&quot; whenever $\gcd(a,m)=1$. Solving linear congruences. </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/26</span><span class="course-task col-md-10"> Each integer is congruent, mod $m$, to a unique integer from $0,1,\dots,m-1$. Examples of computing with congruences. Middle binomial coefficients in the $p$th row are multiples of $p$ (when $p$ is prime).Fermat's little theorem. </span></li>
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/24</span><span class="course-task col-md-10"> Euclid's lemma. Proof of uniqueness of prime factorization. Definition of congruences. Congruence mod $m$ is an equivalence relation on $\mathbb{Z}$. Congruence mod $m$ plays nice with addition and multiplication. </span></li>
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/22</span><span class="course-task col-md-10"> Correctness of Euclid's algorithm. Every common divisor divides the gcd. The gcd as a linear combination of the starting numbers. Fundamental gcd lemma. Every integer $>1$ is a product of prime numbers. </span></li>  
