--- a/3100s24.html
+++ b/3100s24.html
@@ -135,6 +135,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/29</span><span class="course-task col-md-10"> Another example of proving limits from the definition. Convergent sequences are bounded. Statement that limits of convergent sequences converge to the same limit, and a relevant lemma.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/26</span><span class="course-task col-md-10">  Proving limits from the definition; e.g., $\lim \frac{n^2+n+1}{3n^2-5} = \frac{1}{3}$.
                                                     </span></li>
 
