--- a/4000s24.html
+++ b/4000s24.html
@@ -136,6 +136,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/31</span><span class="course-task col-md-10"> 
+                                                    Systems of congruences and the Chinese remainder theorem. 
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/29</span><span class="course-task col-md-10"> The existence of &quot;$1/a$ mod $m$&quot; whenever $\gcd(a,m)=1$. Solving linear congruences. </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/26</span><span class="course-task col-md-10"> Each integer is congruent, mod $m$, to a unique integer from $0,1,\dots,m-1$. Examples of computing with congruences. Middle binomial coefficients in the $p$th row are multiples of $p$ (when $p$ is prime).Fermat's little theorem. </span></li>
