--- a/3100s24.html
+++ b/3100s24.html
@@ -135,6 +135,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/31</span><span class="course-task col-md-10"> If $a_n \to L$ (with $L \in \mathbb{R}$), then every subsequence of $\{a_n\}$ converges to $L$. Behavior of geometric sequences.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/29</span><span class="course-task col-md-10"> Another example of proving limits from the definition. Convergent sequences are bounded. Statement that limits of convergent sequences converge to the same limit, and a relevant lemma.
                                                     </span></li>
 
