--- a/4000s24.html
+++ b/4000s24.html
@@ -119,6 +119,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date"> 
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #3</span><span class="col-md-2 due-date">due 2/9</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
  <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #2</span><span class="col-md-2 due-date">due 1/31</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                   </li>
 												  <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/22</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -136,6 +138,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/2</span><span class="course-task col-md-10"> 
+                                                       Definition of $\mathbb{Z}_m$. Definitions of the terms ring and commutative ring. $\mathbb{Z}_m$ is a commutative ring. There is a unique `zero ring'.
+                                                        </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/31</span><span class="course-task col-md-10"> 
                                                     Systems of congruences and the Chinese remainder theorem. 
                                                     </span></li>
