--- a/3100s24.html
+++ b/3100s24.html
@@ -140,6 +140,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/5</span><span class="course-task col-md-10"> Proof of the product rule. Quotient rule. Diverging to $\infty$ and $-\infty$. 
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/2</span><span class="course-task col-md-10"> If all $a_n \le U$, and $a_n \to A$, then $A \le U$. If $\{a_n\}$ is increasing with limit $U$, then each $a_n \le U$. Review of properties of absolute value. If $a_n \to 0$ and $\{b_n\}$ is bounded, then $a_n\cdot b_n \to 0$. Sum and difference rules for limits. Sketch of proof of product  rule.
                                                     </span></li>
 
