--- a/3100s24.html
+++ b/3100s24.html
@@ -140,6 +140,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/7</span><span class="course-task col-md-10"> Ratio test. Why is $\mathbb{R}$ &quot;better than&quot; $\mathbb{Q}$? 
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/5</span><span class="course-task col-md-10"> Proof of the product rule. Quotient rule. Diverging to $\infty$ and $-\infty$. 
                                                     </span></li>
 
