--- a/4000s24.html
+++ b/4000s24.html
@@ -138,6 +138,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/7</span><span class="course-task col-md-10"> 
+                                                        Definition of the term unit. $\mathbb{Z}_p$ is a field whenever $p$ is prime. Description of all units in $\mathbb{Z}_m$. Analyzing integer solutions to equations by working in $\mathbb{Z}_m$.
+                                                         </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/5</span><span class="course-task col-md-10"> 
                                                         Definition of the term integral domain (or domain). $\mathbb{Z}_m$ is the zero ring if and only if $m=1$. $\mathbb{Z}_m$ is an integral domain if and only if $m$ is prime. Definition of the term field. Every field is an integral domain. 
                                                          </span></li>
