--- a/4000s24.html
+++ b/4000s24.html
@@ -119,7 +119,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date"> 
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #3</span><span class="col-md-2 due-date">due 2/9</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #3</span><span class="col-md-2 due-date">due <del>2/9</del> 2/12
+                                                    </span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
  <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #2</span><span class="col-md-2 due-date">due 1/31</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                   </li>
@@ -138,6 +139,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/9</span><span class="course-task col-md-10"> 
+                                                        Zero divisors. Examples of proofs from the ring axioms. Introduction to the construction of $\mathbb{Q}$.
+                                                         </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/7</span><span class="course-task col-md-10"> 
                                                         Definition of the term unit. $\mathbb{Z}_p$ is a field whenever $p$ is prime. Description of all units in $\mathbb{Z}_m$. Analyzing integer solutions to equations by working in $\mathbb{Z}_m$.
                                                          </span></li>
