HFD paper acceptance

--- a/research.html
+++ b/research.html
@@ -2826,6 +2826,24 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                         </p>
                     </div>
                 </li> 
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">$\mathbb{Z}[\sqrt{-5}]$: halfway to unique factorization</span>  <span class="paper-author"></span>          </h4>
+                        <p>
+                            <a href="https://maa.org/press/periodicals/american-mathematical-monthly"><span class="journal-name">Amer. Math. Monthly</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD-Artin.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper143" aria-expanded="false" aria-controls="paper143">Abstract</a>
+                            <div class="collapse" id="paper143">
+                                <div class="well paper-abtract-content">
+                                    <p>  It is well known that factorization is not unique in $\Z[\sqrt{-5}]$. We give a short, self-contained proof that $\Z[\sqrt{-5}]$ is &quot;halfway&quot; towards being a unique factorization domain: For every nonzero, nonunit $\alpha \in \Z[\sqrt{-5}]$, any two factorizations of $\alpha$ into irreducibles involve the same number of factors.</p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
+
 
 
 
@@ -2849,14 +2867,6 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
         <span class="paper-author">(w/ N. McNew and A. Singha Roy)</span></h4>
     </div>
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/middleprime.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>         
-
-<li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">$\mathbb{Z}[\sqrt{-5}]$: halfway to unique factorization</span>
-        <span class="paper-author"></span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>         
 
 <li class="col-sm-12 list-item with-bullet">
