--- a/research.html
+++ b/research.html
@@ -2832,7 +2832,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                         <p>
                             <a href="https://maa.org/press/periodicals/american-mathematical-monthly"><span class="journal-name">Amer. Math. Monthly</span></a> (<span class="paper-year">to appear</span>)</p>
                     </div>
-                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD-Artin.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
                         <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper143" aria-expanded="false" aria-controls="paper143">Abstract</a>
                             <div class="collapse" id="paper143">
