--- a/4000s24.html
+++ b/4000s24.html
@@ -118,7 +118,10 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                     
-                                                  <ul class="course-summary-to-date"> 
+                                                  <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 review</span><span class="col-md-2 due-date"> </span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+                                                    
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #3</span><span class="col-md-2 due-date">due <del>2/9</del> 2/12
                                                     </span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
