--- a/4000s24.html
+++ b/4000s24.html
@@ -142,6 +142,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/12</span><span class="course-task col-md-10"> 
+                                                        Completion of the construction of $\mathbb{Q}$. $\mathbb{Q}$ is a commutative ring, in fact a field. Start of discussion of how $\mathbb{Q}$ contains a copy of $\mathbb{Z}$. 
+                                                         </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/9</span><span class="course-task col-md-10"> 
                                                         Zero divisors. Examples of proofs from the ring axioms. Introduction to the construction of $\mathbb{Q}$.
