--- a/4000s24.html
+++ b/4000s24.html
@@ -119,6 +119,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
+
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 review</span><span class="col-md-2 due-date"> </span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                     
@@ -142,6 +144,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/14</span><span class="course-task col-md-10"> 
+                                                        $\mathbb{Q}$ contains a copy of $\mathbb{Z}$. $\mathbb{Q}$ is an ordered field. There is no smallest positive element in $\mathbb{Q}$.
+                                                         </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/12</span><span class="course-task col-md-10"> 
                                                         Completion of the construction of $\mathbb{Q}$. $\mathbb{Q}$ is a commutative ring, in fact a field. Start of discussion of how $\mathbb{Q}$ contains a copy of $\mathbb{Z}$. 
                                                          </span></li>
