--- a/3100s24.html
+++ b/3100s24.html
@@ -140,6 +140,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/14</span><span class="course-task col-md-10"> Proof of the Bolzano--Weierstrass theorem. Definition of a Cauchy sequence. Convergent sequences are Cauchy.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/12</span><span class="course-task col-md-10"> $\sqrt{2}$ is a real number via the Completeness Axiom. Preview: the Intermediate Value Theorem. Statement of the Bolzano--Weierstrass theorem. The definition of &quot;peak indices&quot; for a sequence.
                                                     </span></li>
 
