--- a/4000s24.html
+++ b/4000s24.html
@@ -144,6 +144,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/16</span><span class="course-task col-md-10"> 
+                                                        Exam #1.
+                                                         </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/14</span><span class="course-task col-md-10"> 
                                                         $\mathbb{Q}$ contains a copy of $\mathbb{Z}$. $\mathbb{Q}$ is an ordered field. There is no smallest positive element in $\mathbb{Q}$.
                                                          </span></li>
