--- a/3100s24.html
+++ b/3100s24.html
@@ -120,6 +120,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">                       
                                                   <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #4</span><span class="col-md-2 due-date">due 2/23</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
+                                                 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li> 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #3</span><span class="col-md-2 due-date">due 2/7</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
