--- a/4000s24.html
+++ b/4000s24.html
@@ -120,6 +120,7 @@
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
 
+                                                   
 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 review</span><span class="col-md-2 due-date"> </span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
@@ -144,6 +145,15 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> 
+                                                        There is a rational number strictly between any two rational numbers. The rational numbers are &quot;Archimedean&quot;. How to construct $\mathbb{R}$ (non-examinable).
+                                                         </span></li>
+
+
+                                                
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/16</span><span class="course-task col-md-10"> 
                                                         Exam #1.
                                                          </span></li>
