--- a/3100s24.html
+++ b/3100s24.html
@@ -143,6 +143,13 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> Cauchy sequences are bounded. Cauchy sequences converge. Motivation of the LUB property of $\mathbb{R}$.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/16</span><span class="course-task col-md-10"> Cauchy sequences are bounded. Cauchy sequences converge. Motivation of the LUB property of $\mathbb{R}$.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/14</span><span class="course-task col-md-10"> Proof of the Bolzano--Weierstrass theorem. Definition of a Cauchy sequence. Convergent sequences are Cauchy.
                                                     </span></li>
 
