--- a/4000s24.html
+++ b/4000s24.html
@@ -147,6 +147,10 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/21</span><span class="course-task col-md-10"> 
+                                                        How to construct $\mathbb{R}$, continued (non-examinable).
+                                                         </span></li>
+
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> 
                                                         There is a rational number strictly between any two rational numbers. The rational numbers are &quot;Archimedean&quot;. How to construct $\mathbb{R}$ (non-examinable).
