--- a/3100s24.html
+++ b/3100s24.html
@@ -143,7 +143,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
-                                                    <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> Cauchy sequences are bounded. Cauchy sequences converge. Motivation of the LUB property of $\mathbb{R}$.
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/21</span><span class="course-task col-md-10"> Introduction to sequences. The sequence of partial sums. Definition of convergence. Examples, including convergence of $\sum_{k=1}^{\infty} 1/k^2$ and divergence of $\sum_{k=1}^{\infty} 1/k$.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/19</span><span class="course-task col-md-10"> Proof of the LUB property of $\mathbb{R}$ (from completeness in the form of monotone convergence).
                                                     </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/16</span><span class="course-task col-md-10"> Cauchy sequences are bounded. Cauchy sequences converge. Motivation of the LUB property of $\mathbb{R}$.
