--- a/4000s24.html
+++ b/4000s24.html
@@ -120,7 +120,7 @@
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
 
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #4</span><span class="col-md-2 due-date">3/1, by <u>5 PM</u> </span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #4 (<u>updated 2/26</u>)</span><span class="col-md-2 due-date">3/1, by <u>5 PM</u> </span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 review</span><span class="col-md-2 due-date"> </span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
