--- a/3100s24.html
+++ b/3100s24.html
@@ -143,6 +143,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/28</span><span class="course-task col-md-10"> Proof of the basic comparison test. Statement of the Limit Comparison Test. Statement and proof of the Eventual Comparison Test. Proof of the Limit Comparison Test.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/26</span><span class="course-task col-md-10"> $k$th term divergence test. Geometric series. Start of discussion of series with nonnegative terms. Fundamental Principle of Nonnegative Series. Basic Comparison Test.
                                                     </span></li>
