--- a/4000s24.html
+++ b/4000s24.html
@@ -146,6 +146,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">2/28</span><span class="course-task col-md-10"> 
+                                                        Long division in $F[x]$ (with $F$ a field). Root factor theorem. Remainder theorem. Definition of irreducible polynomials in $F[x]$.
+                                                         </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/26</span><span class="course-task col-md-10"> 
                                                         Introduction to polynomials over commutative rings $R$ (not the zero ring). $R[x]$ is a ring. $R[x]$ is a domain when $R$ is a domain; in this case, $\deg{a(x)b(x)}=\deg{a(x)}+\deg{b(x)}$. Statement of division algorithm in $F[x]$ ($F$ a field).
                                                          </span></li>
