--- a/research.html
+++ b/research.html
@@ -3116,6 +3116,15 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                 <ul class="paper-list list">
                                                     <li class="col-sm-12 list-item with-bullet">
                                                         <div class="col-sm-10">
+                                                            <h4>    <span class="paper-title">Stretching, the truth about unique factorization</span>
+                                                            </h4>
+                                                            <p><span><a href="https://www.ntwebseminar.org/">Number Theory Web Seminar</a>; February 2024
+                                                            </span></p>
+                                                        </div>
+                                                        <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/NTS-Feb29.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
+                                                    </li>
+                                                    <li class="col-sm-12 list-item with-bullet">
+                                                        <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">Unique factorization: what not everyone knows</span>
                                                             </h4>
                                                             <p><span>Dartmouth Colloquium; September 2023
