update NTS talk

--- a/research.html
+++ b/research.html
@@ -3121,7 +3121,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                             <p><span><a href="https://www.ntwebseminar.org/">Number Theory Web Seminar</a>; February 2024
                                                             </span></p>
                                                         </div>
-                                                        <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/NTS-Feb29.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
+                                                        <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/NTS-Feb29-corrected.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
                                                     </li>
                                                     <li class="col-sm-12 list-item with-bullet">
                                                         <div class="col-sm-10">
