--- a/4000s24.html
+++ b/4000s24.html
@@ -146,6 +146,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/1</span><span class="course-task col-md-10"> 
+                                                        Statement of unique factorization of polynomials. Proof of existence. Statement of Euclid's lemma. Definition of $\gcd$ in $F[x]$. Existence via Euclidean algorithm. Expression of the gcd as a linear combination of the starting polynomials.
+                                                         </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">2/28</span><span class="course-task col-md-10"> 
                                                         Long division in $F[x]$ (with $F$ a field). Root factor theorem. Remainder theorem. Definition of irreducible polynomials in $F[x]$.
