--- a/3100s24.html
+++ b/3100s24.html
@@ -148,6 +148,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/11</span><span class="course-task col-md-10"> Examples of the integral comparison test. Definition of absolute convergence. Absolute convergence implies convergence, but not vice versa.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/1</span><span class="course-task col-md-10"> Statement of the $p$-test. Proof when $p\le 1$ via the Basic Comparison Test. Statement and proof of the integral comparison test and deduction of the $p$-test when $p>1$.
                                                     </span></li>
 
