--- a/4000s24.html
+++ b/4000s24.html
@@ -149,6 +149,13 @@
                                                 <h6>Semester-to-date summary (reverse chronological order)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
+
+                                                <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/13</span><span class="course-task col-md-10"> Examples of subfields. Definition of $F[\alpha]$, where $F \subseteq K$ and $\alpha \in K$. $F[\alpha]$ is a subring of $K$.
+                                                    Definition of being algebraic over $F$.  Direct proof that $\mathbb{Q}[\sqrt{2}]$ is a field. Statement that $F[\alpha]$ is a field if and only if $\alpha$ is algebraic over $F$.
+                                                    </span></li>
+
+
                                                 <ul class="course-summary-to-date">
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/11</span><span class="course-task col-md-10"> Relatively prime polynomials. A worked example. Fundamental gcd lemma in $F[x]$. Euclid's lemma in $F[x]$. Definition of subfield/extension field.
                                                                                                                  </span></li>
