--- a/3100s24.html
+++ b/3100s24.html
@@ -149,6 +149,10 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/13</span><span class="course-task col-md-10"> Statement and proof of the alternating series test. Examples.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/11</span><span class="course-task col-md-10"> Examples of the integral comparison test. Definition of absolute convergence. Absolute convergence implies convergence, but not vice versa.
                                                     </span></li>
 
