--- a/4000s24.html
+++ b/4000s24.html
@@ -120,7 +120,7 @@
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
 
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 3/18</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due <del>3/18</del> 3/20</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
 
@@ -151,7 +151,10 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
-                                                    <li class="with-bullet"><span class="course-date col-md-1">3/13</span><span class="course-task col-md-10"> Examples of subfields. Definition of $F[\alpha]$, where $F \subseteq K$ and $\alpha \in K$. $F[\alpha]$ is a subring of $K$.
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/15</span><span class="course-task col-md-10"> If $F\subseteq K$ and $\alpha \in K$ is algebraic over $F$, then there is an irreducible polynomial $p(x) \in F[x]$ with $p(\alpha)=0$. If $F\subseteq K$ and $\alpha \in K$ is algebraic over $F$, then $F[\alpha]$ is a field. Description of all elements of $F[\alpha]$.
+                                                    </span></li>
+
+                                                        <li class="with-bullet"><span class="course-date col-md-1">3/13</span><span class="course-task col-md-10"> Examples of subfields. Definition of $F[\alpha]$, where $F \subseteq K$ and $\alpha \in K$. $F[\alpha]$ is a subring of $K$.
                                                     Definition of being algebraic over $F$.  Direct proof that $\mathbb{Q}[\sqrt{2}]$ is a field. Statement that $F[\alpha]$ is a field if and only if $\alpha$ is algebraic over $F$.
                                                     </span></li>
 
