--- a/3100s24.html
+++ b/3100s24.html
@@ -121,6 +121,8 @@
                                             <div class="module-content col-sm-9">                       
                                                   <ul class="course-summary-to-date">
 
+
+                                                    
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 3/18</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
@@ -148,6 +150,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/15</span><span class="course-task col-md-10"> Ratio test and its proof.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/13</span><span class="course-task col-md-10"> Statement and proof of the alternating series test. Examples.
                                                     </span></li>
