--- a/3100s24.html
+++ b/3100s24.html
@@ -122,7 +122,8 @@
                                                   <ul class="course-summary-to-date">
 
 
-                                                    
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 3/18</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
