--- a/4000s24.html
+++ b/4000s24.html
@@ -151,6 +151,12 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/20</span><span class="course-task col-md-10"> Adjoining any finite number of algebraic elements to a field $F$ gives a field. Start of discussion of irreducibility over $\mathbb{Q}$. Rational root test and proof. Statement of Gauss's lemma.
+                                                    </span></li>
+                                                   
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/18</span><span class="course-task col-md-10"> The rings $F[\alpha,\beta]$ and more generally $F[\alpha_1,\dots\alpha_n]$. Case study: $\mathbb{Q}[\sqrt{2},\sqrt{3}]$. Proof $\mathbb{Q}[\sqrt{2},\sqrt{3}]$ is a field. 
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/15</span><span class="course-task col-md-10"> If $F\subseteq K$ and $\alpha \in K$ is algebraic over $F$, then there is an irreducible polynomial $p(x) \in F[x]$ with $p(\alpha)=0$. If $F\subseteq K$ and $\alpha \in K$ is algebraic over $F$, then $F[\alpha]$ is a field. Description of all elements of $F[\alpha]$.
                                                     </span></li>
 
