--- a/3100s24.html
+++ b/3100s24.html
@@ -152,6 +152,9 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/18</span><span class="course-task col-md-10"> A mathemagical trick. Rearranging $1-1/2+1/3-1/4+\dots$ to sum to $0$.
+                                                    </span></li>
+
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/15</span><span class="course-task col-md-10"> Ratio test and its proof.
                                                     </span></li>
