--- a/3100s24.html
+++ b/3100s24.html
@@ -151,6 +151,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/20</span><span class="course-task col-md-10"> Introduction to power series. Examples of computing domains of convergence (DOC). Statement of the general form of the DOC. The key lemma for power series (centered at $0$): Convergence at $x=r$ implies convergence when $|x| < |r|$.
+                                                         </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/18</span><span class="course-task col-md-10"> A mathemagical trick. Rearranging $1-1/2+1/3-1/4+\dots$ to sum to $0$.                                                    </span></li>
 
