--- a/3100s24.html
+++ b/3100s24.html
@@ -151,6 +151,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/22</span><span class="course-task col-md-10"> Exam #2.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/20</span><span class="course-task col-md-10"> Introduction to power series. Examples of computing domains of convergence (DOC). Statement of the general form of the DOC. The key lemma for power series (centered at $0$): Convergence at $x=r$ implies convergence when $|x| < |r|$.
                                                          </span></li>
 
