--- a/4000s24.html
+++ b/4000s24.html
@@ -119,7 +119,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due <del>3/18</del> 3/20</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
@@ -151,6 +152,9 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/22</span><span class="course-task col-md-10"> Testing irreducibility by reducing modulo $p$. Eisenstein's irreducibility criterion.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/20</span><span class="course-task col-md-10"> Adjoining any finite number of algebraic elements to a field $F$ gives a field. Start of discussion of irreducibility over $\mathbb{Q}$. Rational root test and proof. Statement of Gauss's lemma.
                                                     </span></li>
                                                    
