--- a/3100s24.html
+++ b/3100s24.html
@@ -151,6 +151,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">3/25</span><span class="course-task col-md-10"> 
+                                                    Completion of the proof of the theorem on the form of the DOC. Introduction to continuity. Geometric interpretation of continuity.
+                                                </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/22</span><span class="course-task col-md-10"> Exam #2.
                                                     </span></li>
 
