--- a/3100s24.html
+++ b/3100s24.html
@@ -152,6 +152,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/29</span><span class="course-task col-md-10"> 
+                                                        Applications of sequential continuity for continuity rules: Constant multiple rule, sum and product rule, compositions of continuous functions are continuous. Corollaries: Polynomials and rational functions are continuous.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/27</span><span class="course-task col-md-10"> 
                                                         Proving continuity from the $\epsilon$-$\delta$ definition. The sequential criterion for continuity.
                                                     </span></li>
