--- a/3100s24.html
+++ b/3100s24.html
@@ -152,8 +152,13 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/3</span><span class="course-task col-md-10"> 
+                                                        Statement and proof of the Maximum Value Theorem. A continuous function on a closed interval has image a closed interval (possibly degenerate: a single point).
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/1</span><span class="course-task col-md-10"> 
-                                                        Statement and proof of the intermediate value theorem.
+                                                        Statement and proof of the Intermediate Value Theorem.
                                                     </span></li>
 
 
