--- a/4000s24.html
+++ b/4000s24.html
@@ -161,7 +161,7 @@
 
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/7</span><span class="course-task col-md-10"> 
-                                                        Direct product of rings. $\Z_{mn} \cong \Z_m \times \Z_n$ when $m$ and $n$ are relatively prime.
+                                                        Direct product of rings. $\mathbb{Z}_{mn} \cong \mathbb{Z}_m \times \mathbb{Z}_n$ when $m$ and $n$ are relatively prime.
                                                         </span></li> 
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/5</span><span class="course-task col-md-10"> 
