--- a/4000s24.html
+++ b/4000s24.html
@@ -119,6 +119,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
+
+                                                    
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #7</span><span class="col-md-2 due-date">due 4/17</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li> 
 
@@ -158,9 +160,11 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/10</span><span class="course-task col-md-10"> 
+                                                        $\mathbb{Z}_{mn}\not\cong \mathbb{Z}_m\times \mathbb{Z}_n$ when $\gcd(m,n)=1$. Statement of the Fundamental Homomorphism Theorem. $\mathbb{Z}_{10}/\{0,5} \cong \mathbb{Z}_5$. If $F$ is a subfield in $K$, and $\alpha \in K$ is a root of the irreducible polynomial $p(x) \in F[x]$, then $F[x]/\langle p(x)\rangle \cong F[\alpha]$.
+                                                        </span></li> 
 
-
-                                                    <li class="with-bullet"><span class="course-date col-md-1">4/7</span><span class="course-task col-md-10"> 
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/8</span><span class="course-task col-md-10"> 
                                                         Direct product of rings. $\Z_{mn} \cong \Z_m \times \Z_n$ when $m$ and $n$ are relatively prime.
                                                         </span></li> 
 
