4000 update and research page update

--- a/4000s24.html
+++ b/4000s24.html
@@ -160,6 +160,11 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/12</span><span class="course-task col-md-10"> 
+                                                        Proof of the Fundamental Homomorphism Theorem. Definition of splitting over a field $F$. Statement of the Fundamental Theorem of Algebra. Example of constructing a field where a given polynomial has a root.
+                                                        </span></li> 
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/10</span><span class="course-task col-md-10"> 
                                                         $\mathbb{Z}_{mn}\not\cong \mathbb{Z}_m\times \mathbb{Z}_n$ when $\gcd(m,n)=1$. Statement of the Fundamental Homomorphism Theorem. $\mathbb{Z}_{10}/\{0,5\} \cong \mathbb{Z}_5$. If $F$ is a subfield in $K$, and $\alpha \in K$ is a root of the irreducible polynomial $p(x) \in F[x]$, then $F[x]/\langle p(x)\rangle \cong F[\alpha]$.
                                                         </span></li> 
