--- a/research.html
+++ b/research.html
@@ -2877,9 +2877,6 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/meanphi.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>         
 
-
-
-
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
         <h4> <span class="paper-title">Maximally elastic quadratic fields</span>
@@ -2888,7 +2885,13 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/maximallyelastic.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>         
 
-
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">Two variants of a theorem of Schinzel and Wójcik on multiplicative orders</span>
+        <span class="paper-author"></span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SchinzelWojcik.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>         
 </ul>
                                             </div>
                                         </div>
