--- a/3100s24.html
+++ b/3100s24.html
@@ -157,6 +157,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/17</span><span class="course-task col-md-10"> 
+                                                        Proof of the Mean Value Theorem. If $f'=0$ on an open interval, then $f$ is constant on that interval. Start of discussion of closed forms for power series: Geometric series.
+                                                       </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/15</span><span class="course-task col-md-10"> 
                                                         Proof of chain rule. If $f$ has a maximum/min on an open interval $I$ at $x_0 \in I$, and $f$ is differentiable at $x_0$, then $f'(x_0)=0$. Rolle's theorem. Statement of the Mean Value Theorem.
                                                        </span></li>
