--- a/3100s24.html
+++ b/3100s24.html
@@ -161,6 +161,16 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/22</span><span class="course-task col-md-10"> 
+                                                        Introduction to Taylor series. If $f$ has a power series valid on an open interval centered at $0$, that power series must be its Taylor series. Computation of Taylor series of $e^x, \sin x, \cos x$. A pathological example.
+                                                       </span></li>
+
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/19</span><span class="course-task col-md-10"> 
+                                                        Differentiating and integrating power series. Examples.
+                                                       </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/17</span><span class="course-task col-md-10"> 
                                                         Proof of the Mean Value Theorem. If $f'=0$ on an open interval, then $f$ is constant on that interval. Start of discussion of closed forms for power series: Geometric series.
                                                        </span></li>
